Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-37098

spider test suite failures in any network sandbox: Can't get hardware address with error

    XMLWordPrintable

Details

    • Can result in unexpected behaviour

    Description

      Two tests from spider test suite fail because they cannot retrieve HW address. This happens because Gentoo network sandbox contains only lo interface which has MAC address 00:00:00:00:00:00. The https://jira.mariadb.org/browse/MDEV-34733?focusedCommentId=295754&page=com.atlassian.jira.plugin.system.issuetabpanels:comment-tabpanel#comment-295754 might be related.

      spider.mdev_28009                        w1 [ fail ]  Found warnings/errors in server log file!
              Test ended at 2025-06-27 10:17:05
      line
      2025-06-27 10:17:04 0 [Warning] mariadbd: Can't get hardware address with error 2
      ^ Found warnings in /var/tmp/portage/dev-db/mariadb-11.8.2/temp/var-tests/1/log/mysqld.2.1.err
      ok
      line
      2025-06-27 10:17:04 0 [Warning] mariadbd: Can't get hardware address with error 2
      ^ Found warnings in /var/tmp/portage/dev-db/mariadb-11.8.2/temp/var-tests/1/log/mysqld.2.3.err
      ok
      line
      2025-06-27 10:17:04 0 [Warning] mariadbd: Can't get hardware address with error 2
      ^ Found warnings in /var/tmp/portage/dev-db/mariadb-11.8.2/temp/var-tests/1/log/mysqld.1.1.err
      ok
      line
      2025-06-27 10:17:04 0 [Warning] mariadbd: Can't get hardware address with error 2
      ^ Found warnings in /var/tmp/portage/dev-db/mariadb-11.8.2/temp/var-tests/1/log/mysqld.3.1.err
      ok
      line
      2025-06-27 10:17:04 0 [Warning] mariadbd: Can't get hardware address with error 2
      ^ Found warnings in /var/tmp/portage/dev-db/mariadb-11.8.2/temp/var-tests/1/log/mysqld.2.2.err
      ok
      line
      2025-06-27 10:17:04 0 [Warning] mariadbd: Can't get hardware address with error 2
      ^ Found warnings in /var/tmp/portage/dev-db/mariadb-11.8.2/temp/var-tests/1/log/mysqld.3.2.err
      ok
      line
      2025-06-27 10:17:04 0 [Warning] mariadbd: Can't get hardware address with error 2
      ^ Found warnings in /var/tmp/portage/dev-db/mariadb-11.8.2/temp/var-tests/1/log/mysqld.4.1.err
      ok
      line
      2025-06-27 10:17:04 0 [Warning] mariadbd: Can't get hardware address with error 2
      ^ Found warnings in /var/tmp/portage/dev-db/mariadb-11.8.2/temp/var-tests/1/log/mysqld.3.3.err
      ok
       
       - saving '/var/tmp/portage/dev-db/mariadb-11.8.2/temp/var-tests/1/log/spider.mdev_28009/' to '/var/tmp/portage/dev-db/mariadb-11.8.2/temp/var-tests/log/spider.mdev_28009/'
      

      CURRENT_TEST: spider.vector
      --- /var/tmp/portage/dev-db/mariadb-11.8.2/work/mysql/storage/spider/mysql-test/spider/r/vector.result    2025-06-26 09:57:12.094924884 -0000
      +++ /var/tmp/portage/dev-db/mariadb-11.8.2/work/mysql/storage/spider/mysql-test/spider/r/vector.reject    2025-06-27 10:17:11.745327062 -0000
      @@ -1,4 +1,6 @@
       INSTALL SONAME 'ha_spider';
      +Warnings:
      +Warning        12721   Can't get hardware address with error 22
       SET spider_same_server_link= ON;
       create server s foreign data wrapper mysql options (host "127.0.0.1", database "test", user "root", port $MASTER_1_MYPORT);
       #
       
      Result length mismatch
       
       - saving '/var/tmp/portage/dev-db/mariadb-11.8.2/temp/var-tests/3/log/spider.vector/' to '/var/tmp/portage/dev-db/mariadb-11.8.2/temp/var-tests/log/spider.vector/'
      

      Attachments

        Issue Links

          Activity

            People

              otto Otto Kekäläinen
              arkamar Petr Vaněk
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.